--- a/BTVN/1_ProductListing/1_ProductListing/btvn.css
+++ b/BTVN/1_ProductListing/1_ProductListing/btvn.css
@@ -18,6 +18,12 @@
     align-items: center;
 }
 
+#Right2 {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+
 #text {
     color: black;
     position: absolute;
@@ -47,9 +53,34 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 75%;
+    width: 70%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+}
+
+#Left2 {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 40px;
+}
+
+#Left3 {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    color: darkgray;
+    width: 15%;
+}
+
+#container11 {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    width: 50%;
 }
 
 #Product {
@@ -131,6 +162,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 200px;
     width: 25%;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -139,6 +171,7 @@
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
+    height: 200px;
     background-color: #171718;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
